{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 270,
  "lineage": "7a79a197-3ed1-1751-5e01-f4116d3cab1a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:319197018462:instance/i-09adbd0c83573b777",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09adbd0c83573b777",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0de49436bc4b0446e"
              }
            ],
            "primary_network_interface_id": "eni-0de49436bc4b0446e",
            "private_dns": "ip-10-1-3-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-024b45594e50db164",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c691b51a932c3ae",
            "tags": {
              "Name": "dev-private-ec2-1"
            },
            "tags_all": {
              "Name": "dev-private-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce665b6a482e023f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:319197018462:instance/i-0d856267c7163473d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d856267c7163473d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b476843a85d4b89b"
              }
            ],
            "primary_network_interface_id": "eni-0b476843a85d4b89b",
            "private_dns": "ip-10-1-3-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e549842f0adddc46",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c691b51a932c3ae",
            "tags": {
              "Name": "dev-private-ec2-2"
            },
            "tags_all": {
              "Name": "dev-private-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce665b6a482e023f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:319197018462:instance/i-0f29d40978f9bd7bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f29d40978f9bd7bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-020778c65eead180c"
              }
            ],
            "primary_network_interface_id": "eni-020778c65eead180c",
            "private_dns": "ip-10-1-1-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.35",
            "public_ip": "54.147.167.40",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-046c1cc01068ed304",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbb684250280fb73",
            "tags": {
              "Name": "dev-public-ec2-1"
            },
            "tags_all": {
              "Name": "dev-public-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04220858da4734262"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:319197018462:instance/i-051e7a4cdd575bc24",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-051e7a4cdd575bc24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cd11a2602ca226f9"
              }
            ],
            "primary_network_interface_id": "eni-0cd11a2602ca226f9",
            "private_dns": "ip-10-1-1-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.95",
            "public_ip": "34.229.204.31",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0adec2df928c74a73",
                "volume_size": 40,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbb684250280fb73",
            "tags": {
              "Name": "dev-public-ec2-2"
            },
            "tags_all": {
              "Name": "dev-public-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04220858da4734262"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:security-group/sg-0ce665b6a482e023f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce665b6a482e023f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04220858da4734262"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "319197018462",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:security-group/sg-04220858da4734262",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04220858da4734262",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-public-ec2-sg",
            "name_prefix": "",
            "owner_id": "319197018462",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "net_eip",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03473ceb44cf78a09",
            "arn": "arn:aws:ec2:us-east-1:319197018462:elastic-ip/eipalloc-03473ceb44cf78a09",
            "domain": "vpc",
            "id": "eipalloc-03473ceb44cf78a09",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-39-71.compute-1.amazonaws.com",
            "public_ip": "18.213.39.71",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a929b7657e49e2b",
            "arn": "arn:aws:ec2:us-east-1:319197018462:elastic-ip/eipalloc-06a929b7657e49e2b",
            "domain": "vpc",
            "id": "eipalloc-06a929b7657e49e2b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-56-19.compute-1.amazonaws.com",
            "public_ip": "23.21.56.19",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:internet-gateway/igw-06a101b68400ef2a5",
            "id": "igw-06a101b68400ef2a5",
            "owner_id": "319197018462",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03473ceb44cf78a09",
            "association_id": "eipassoc-0ffd666c9e418c06a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01dbfce499bc12044",
            "network_interface_id": "eni-0429e32c22781c57f",
            "private_ip": "10.1.1.132",
            "public_ip": "18.213.39.71",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fbb684250280fb73",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a929b7657e49e2b",
            "association_id": "eipassoc-00b02537f2ee8b483",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-07d8cac94dbfbd73c",
            "network_interface_id": "eni-0b29246e62e9d9b15",
            "private_ip": "10.1.2.167",
            "public_ip": "23.21.56.19",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d5d19dab8ece184",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-nat-gw-2"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:route-table/rtb-02238047f84517ef3",
            "id": "rtb-02238047f84517ef3",
            "owner_id": "319197018462",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01dbfce499bc12044",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:route-table/rtb-0fc958b46aad7cf9d",
            "id": "rtb-0fc958b46aad7cf9d",
            "owner_id": "319197018462",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d8cac94dbfbd73c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:route-table/rtb-01b1bc2276249ee66",
            "id": "rtb-01b1bc2276249ee66",
            "owner_id": "319197018462",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a101b68400ef2a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-1"
            },
            "tags_all": {
              "Name": "dev-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:route-table/rtb-005ebf073f913e122",
            "id": "rtb-005ebf073f913e122",
            "owner_id": "319197018462",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a101b68400ef2a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-2"
            },
            "tags_all": {
              "Name": "dev-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assocaition_pub",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db0beb22478cac4f",
            "region": "us-east-1",
            "route_table_id": "rtb-01b1bc2276249ee66",
            "subnet_id": "subnet-0fbb684250280fb73"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c6f519e9df077e1",
            "region": "us-east-1",
            "route_table_id": "rtb-005ebf073f913e122",
            "subnet_id": "subnet-02d5d19dab8ece184"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associateion_pri",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8cea66586da81ea",
            "region": "us-east-1",
            "route_table_id": "rtb-02238047f84517ef3",
            "subnet_id": "subnet-05c691b51a932c3ae"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe57541b8979684e",
            "region": "us-east-1",
            "route_table_id": "rtb-0fc958b46aad7cf9d",
            "subnet_id": "subnet-03b4f905feca97832"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:subnet/subnet-05c691b51a932c3ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c691b51a932c3ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319197018462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:subnet/subnet-03b4f905feca97832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b4f905feca97832",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319197018462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:subnet/subnet-0fbb684250280fb73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb684250280fb73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319197018462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:subnet/subnet-02d5d19dab8ece184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d5d19dab8ece184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319197018462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-01c90be5556c4c3f7"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319197018462:vpc/vpc-01c90be5556c4c3f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a48a64385c70d068",
            "default_route_table_id": "rtb-08df81d2bfa654b2f",
            "default_security_group_id": "sg-0b01d7c324cecd9cb",
            "dhcp_options_id": "dopt-0903a38695c577a10",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c90be5556c4c3f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08df81d2bfa654b2f",
            "owner_id": "319197018462",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}